# fractalaw

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/plans/: floating-pondering-dream.md  latest.md  micro-apps.md
.claude/sessions/: 02-12-26-begin.md  02-17-26-duckdb-ingestion-plan.md  02-19-26-LAT-schema.md  02-19-26-arrow-versioning.md  02-19-26-plan-wire-up-datafusion.md  02-20-26-ai-classification.md  02-20-26-persistent-duckdb.md  02-20-26-phase2-lancedb-embeddings.md  02-20-26-pre-tokenized-text.md  02-21-26-drrp-polisher.md  02-21-26-wasmtime-bootstrap.md
.claude/skills/native-compilation/: SKILL.md
.githooks/: pre-commit  pre-push  setup.sh
.github/workflows/: ci.yml
crates/fractalaw-ai/: Cargo.toml
crates/fractalaw-ai/src/: classifier.rs  embedder.rs  labels.rs  lib.rs
crates/fractalaw-cli/: Cargo.toml
crates/fractalaw-cli/src/: display.rs  embed.rs  main.rs
crates/fractalaw-core/: Cargo.toml
crates/fractalaw-core/src/: drrp.rs  lib.rs  schema.rs  sort_key.rs
crates/fractalaw-host/: Cargo.toml
crates/fractalaw-host/src/: lib.rs
crates/fractalaw-store/: Cargo.toml
crates/fractalaw-store/src/: duck.rs  error.rs  fusion.rs  lance.rs  lib.rs
crates/fractalaw-sync/: Cargo.toml
crates/fractalaw-sync/src/: http.rs  lib.rs
data/: export_lat.sql  export_legislation.sql
docs/: SCHEMA-2.0.md  SCHEMA.md  fractal-plan.md
guests/data-test/: Cargo.toml
guests/data-test/src/: bindings.rs  lib.rs
guests/drrp-polisher/: Cargo.toml
guests/drrp-polisher/src/: ipc.rs  lib.rs
guests/hello-world/: Cargo.toml
guests/hello-world/src/: bindings.rs  lib.rs
guests/inference-test/: Cargo.toml
guests/inference-test/src/: lib.rs
wit/: ai.wit  audit.wit  data.wit  events.wit  world.wit
