[workspace]
resolver = "2"
members = [
    "crates/fractalaw-core",
    "crates/fractalaw-store",
    "crates/fractalaw-ai",
    "crates/fractalaw-sync",
    "crates/fractalaw-host",
    "crates/fractalaw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/fractalaw/fractalaw"

[workspace.dependencies]
# Arrow ecosystem (pure Rust)
arrow = { version = "57", features = ["ipc"] }

# These require C/C++ toolchain — gated behind features
datafusion = "52"
lancedb = "0.26"
duckdb = { git = "https://github.com/duckdb/duckdb-rs", rev = "a2639608", features = ["bundled"] }
ort = "2.0.0-rc.11"

# WebAssembly host (pure Rust + Cranelift)
wasmtime = { version = "29", features = ["component-model", "async"] }

# Networking / sync
tonic = "0.13"
prost = "0.13"
arrow-flight = "57"

# CRDTs (pure Rust)
loro = "1"

# Cryptography
rustls = "0.23"
ring = "0.17"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
