[package]
name = "fractalaw-cli"
description = "CLI entry point for Fractalaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fractalaw"
path = "src/main.rs"

[dependencies]
fractalaw-store = { path = "../fractalaw-store", features = ["duckdb", "datafusion"] }
arrow = { workspace = true, features = ["prettyprint"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
