[package]
name = "fractalaw-core"
description = "Core types, Arrow schemas, and shared configuration for Fractalaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
