[workspace]

[package]
name = "drrp-polisher"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "fractal:drrp-polisher"
target.path = "wit"
target.world = "micro-app"
